# ClawBench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml  run.sh
.devcontainer/: devcontainer-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_test_case.yml
.github/workflows/: build-clawbench-openclaw.yml  check-harness-build.yml  publish-pypi.yml  run-test.yml  static-check.yml  validate-task.yml
docs/: README.zh-CN.md  scoring.md  v1-vs-v2.md
scripts/: reproduce.sh  rescore.sh
src/: README.md
src/clawbench/: tui.py
src/clawbench/eval/: reproduce.py  rescore.py
src/clawbench/runner/: batch.py  judge.py  judge_llm.py  run.py
src/clawbench/runner/run_support/: config.py  docker.py  (+4 more)
test-cases/: task.schema.json
test-cases/claw-eval/: ce-T045zh-cve-research.json  ce-T046-cve-research.json  ce-T047zh-oss-comparison.json  ce-T048-oss-comparison.json  ce-T049zh-regulatory-research.json  ce-T050-regulatory-research.json  ce-T053-finance-us-steel-merger.json  ce-T054-finance-nflx-arppu-trend.json  ce-T059-finance-abnb-cfo.json  ce-T060-finance-tko-endeavor-cost.json  ce-T061-finance-mu-gm-beat.json  ce-T062-finance-pltr-cagr.json  ce-T063-finance-fnd-sssg.json  ce-T064-finance-nflx-cash-req.json  ce-T065-finance-x-inv-turnover.json  ce-T066-finance-bros-gross-profit.json  ce-T067zh-synopsys-china-revenue.json  ce-T069-micron-capex-analysis.json  ce-T071-video-mme-coauthor-papers.json
test-cases/v1/501-creation-init-general-asana/: task.json
test-cases/v1/566-job-search-hr-job-search-ziprecruiter/: task.json
test-cases/v1/571-job-search-hr-recruitment-mgmt-workable/: task.json
test-cases/v2/v2-086-job-search-hr-cv-autofill-greenhouse-meta/: task.json
tests/: conftest.py  test_batch_and_tui_helpers.py  test_cli_entrypoints.py  test_harness_registry.py  test_host_resources.py  test_host_tasks.py  test_mock_container_runtime.py  test_results_and_metadata.py  test_tui_helpers.py  test_usage.py
(+44 files in other folders)
